  - The Interpreter now supports interpretation of recursive operations.
  - The comparison of nested collections should now work correctly.
  
* Some bugs in Ocl22Java were fixed.
  - OclAny.oclIsInvalid() is now transformed into working Java code.
  - OclCollection.sum() is now transformed into working Java code. 

GUI
---
* Introduction of the new OCL Editor (see above)

* Improvements of the Model Browser
  - Static operations and properties are now highlighted with different symbols.
  - Constraints and their expressions are now highlighted with sensible symbols.
  
* A bug in the Model Instance Browser has been fixed.
  - OCL-defined features are not displayed as undefined in the Model Instance Browser 
    anymore.
    
* The Eclipse Package Explorer and Navigator now provide functionalities for Model and Model
  Instance Import in their pop-up menus.


Release 2.2 (June 16th 2010)
============================

* Dresden OCL2 for Eclipse now supports OCL 2.2!
  - The only exception is that the new keyword static is not supported yet.
  - Parsing, Interpretation and Java Code Generation of OCL 2.2 is now possible.
  
* A new Facade Plug-in containing a facade for all functionalities of
  Dresden OCL2 for Eclipse has been introduced.
  
* Dresden OCL2 for Eclipse now includes a standalone version for non-Eclipse Java projects.
  
* The Model and Model Instance Life-cycle Management has been improved.
  - After import, Models can now be removed again.
  - After import, Models can now be refreshed to update external changes.
  - After import, Model Instances can now be removed again.
  - Constraints can now be removed from models again.
  - Defined operations and properties are now removed then their constraints are removed as well.
  - Models can now be observed for changes.

* A bug in the ModelRegistry was fixed.
  - Adding of Models should now handle NullPointerExceptions correctly.
 
* XML Schemas are now supported as models for DresdenOCL.
