@@ -42,5 +42,20 @@
             name="OCL2 Interpreter">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="tudresden.ocl20.pivot.ui.perspective">
+         <view
+               id="tudresden.ocl20.pivot.interpreter.ui.internal.views.InterpreterView"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipse.ui.views.PropertySheet">
+         </view>
+         <viewShortcut
+               id="tudresden.ocl20.pivot.interpreter.ui.internal.views.InterpreterView">
+         </viewShortcut>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
